kubernetes/apps/minio/minio/operator/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minio.toskbot.xyz`)
      kind: Rule
      services:
        - name: console
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: minio.toskbot.xyz
